# gitsync

./: .env.example  .gitignore  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: sync.yml
src/gitsync/: __init__.py  __main__.py  cli.py
src/gitsync/action/: __init__.py  entrypoint.py
src/gitsync/core/: __init__.py  config.py  github_client.py  gitlab_client.py  models.py  storage.py  sync_engine.py
src/gitsync/web/: __init__.py  app.py  dependencies.py
src/gitsync/web/routes/: __init__.py  activity.py  api.py  config.py  dashboard.py
src/gitsync/web/static/css/: app.css
src/gitsync/web/templates/: activity.html  base.html  dashboard.html  settings.html
src/gitsync/web/templates/partials/: activity_rows.html  sync_status.html  toast.html
tests/: conftest.py  test_cli.py  test_github_client.py  test_gitlab_client.py  test_storage.py  test_sync_engine.py
tests/test_web/: test_routes.py
